# -bazel-bin-node_modules-issue

./: .bazel.env  .docker.env  BUILD.bazel  README.md  WORKSPACE  client.ts  docker-compose.yaml  example.proto  package-lock.json  package.json  server.ts  tsconfig.json  tslint.json
